--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -33,6 +33,7 @@ en:
     login_button: "Log in"
     city_met: "City where we met?"
     city_lived: "City where we lived together?"
+    more_info_soon: "More information soon..."
   contact:
     header: "Join us on our special day"
     tagline: "What are you waiting for? Fill the RSVP and tell us you’ll be there, can’t wait to see you!"
