--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -15,6 +15,7 @@ pt:
     login_button: "Entrar"
     city_met: "Em que cidade nos conhecemos?"
     city_lived: "Em que cidade vivemos juntos?"
+    more_info_soon: "Mais informacoes brevemente..."
   contact:
     header: "Podemos contar convosco?"
     tagline: "Do que estão à espera? Preencham o formulário abaixo e digam-nos se vão estar presentes!"
