--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -34,6 +34,9 @@ en:
     city_met: "City where we met?"
     city_lived: "City where we lived together?"
     more_info_soon: "More information soon..."
+  map:
+    header_church: "Wedding Church"
+    header_party: "Party House"
   contact:
     header: "Join us on our special day"
     tagline: "What are you waiting for? Fill the RSVP and tell us you’ll be there, can’t wait to see you!"
