--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -16,6 +16,9 @@ pt:
     city_met: "Em que cidade nos conhecemos?"
     city_lived: "Em que cidade vivemos juntos?"
     more_info_soon: "Mais informacoes brevemente..."
+  map:
+    header_church: "Cerimónia Religiosa"
+    header_party: "Quero é comer"
   contact:
     header: "Podemos contar convosco?"
     tagline: "Do que estão à espera? Preencham o formulário abaixo e digam-nos se vão estar presentes!"
