--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -54,7 +54,7 @@ en:
     suggestions: "Music names and other suggestions..."
   our_suggestions:
     header: "Our suggestions"
-    tagline: "Here you will find our suggestions in regards to parking, accommodations and other useful tips. We hope to make this available soon!"
+    tagline: "In case you need accommodations near Vila do Conde, here are a couple suggestions:"
   notices:
     email: "Email sent, thank you!"
     authenticated: "Correct password, well done!"
