--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -36,7 +36,7 @@ pt:
     suggestions: "Nomes de músicas e outras sugestões que possam ter..."
   our_suggestions:
     header: "As nossas sugestões"
-    tagline: "Aqui irão encontrar sugestões de estacionamento, alojamento entre outras. Esperemos disponibilizar esta secção em breve!"
+    tagline: "Caso necessitem de ficar a dormir em Vila do Conde, ficam aqui algumas sugestões:"
   notices:
     email: "Email enviado, obrigado!"
     authenticated: "Password correcta, boa!"
