fix copo de agua text

--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -18,7 +18,7 @@ pt:
     more_info_soon: "Mais informacoes brevemente..."
   map:
     header_church: "Cerimónia Religiosa"
-    header_party: "Quero é comer"
+    header_party: "Copo de Água"
   contact:
     header: "Podemos contar convosco?"
     tagline: "De que estão à espera? Preencham o formulário abaixo e digam-nos se vão estar presentes!"
