--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -35,8 +35,8 @@ en:
     city_lived: "City where we live?"
     more_info_soon: "More information soon..."
   map:
-    header_church: "Wedding Church"
-    header_party: "Party House"
+    header_church: "Capela de Santo Ovídio, 15h30"
+    header_party: "Casa de Gião"
   contact:
     header: "Join us on our special day"
     tagline: "What are you waiting for? Fill the RSVP and tell us you’ll be there, can’t wait to see you!"
