--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -36,7 +36,9 @@ en:
     more_info_soon: "More information soon..."
   map:
     header_church: "Capela de Santo Ovídio, 15h30"
+    header_church_desc: "Vairão, Vila do Conde"
     header_party: "Casa de Gião"
+    header_party_desc: "Gião, Vila do Conde"
   contact:
     header: "Join us on our special day"
     tagline: "What are you waiting for? Fill the RSVP and tell us you’ll be there, can’t wait to see you!"
