Fix typo in 'suggestoes'

--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -5,7 +5,7 @@ pt:
     our_suggestions: 'As nossas...'
     contact: 'RSVP'
     list: 'Lista?'
-    suggestions: "Suggestões"
+    suggestions: "Sugestões"
     your_suggestions: "As vossas..."
   date:
     formats:
